# dental-conditions-detection

./: .env  DOCKER.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  worker.py
backend/app/: main.py
backend/app/api/: routes.py  ws_routes.py
backend/app/core/: config.py  exceptions.py
backend/app/core/celery/: app.py
backend/app/dependencies/: __init__.py  file_validation.py
backend/app/models/: detection.py
backend/app/services/: diagnostic_service.py  inference_service.py  task_service.py
backend/app/tasks/: __init__.py  dicom_parser.py  inference_task.py  report_generation.py
backend/app/websockets/: __init__.py  connection.py
backend/core/: inference.py
docs/: README.md
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: dcmjs-native-codecs.wasm
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: dcm-dropzone.tsx  detection-image-preview.tsx  dicom-image-preview.tsx  image-preview.tsx  nav.tsx  prediction-results.tsx  provider.tsx
frontend/src/components/detection/: detection-badge-list.tsx  detection-image-preview.tsx  detection-overlay.tsx
frontend/src/components/dicom/: dicom-dropzone.tsx  dicom-file-item.tsx  dicom-metadata.tsx
frontend/src/hooks/: use-diagnostic-report.ts  use-dicom-detection.ts
frontend/src/lib/: axios.ts  constants.ts  pdf-export.ts  store.ts  types.ts  utils.ts
(+7 files in other folders)
