[project]
name = "dobbe-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gdcm>=1.1",
    "inference-sdk>=0.50.3",
    "pillow>=11.2.1",
    "pydantic-settings>=2.9.1",
    "pydicom>=3.0.1",
    "pylibjpeg>=2.0.1",
    "pylibjpeg-libjpeg>=2.3.0",
    "pylibjpeg-openjpeg>=2.4.0",
    "python-dotenv>=1.1.0",
]
